update index file

--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-Hello World
+<!DOCTYPE html>
+<html>
+<head>
+<title>Page Title</title>
+</head>
+<body>
+
+<h1>Daniel Gloven's Github Site</h1>
+<p>There's nothing here, so check out this picture in the meantime...</p>
+<img src="http://www.mountainproject.com/images/55/89/110935589_large_d802b1.jpg">
+</body>
+</html>
