--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 
 <h1>Daniel Gloven's Github Site</h1>
 <p>There's nothing here, so check out this picture in the meantime...</p>
-<img src="http://www.mountainproject.com/images/55/89/110935589_large_d802b1.jpg">
+<img src="http://www.mountainproject.com/images/55/89/110935589_large_d802b1.jpg" width="50%">
 </body>
 </html>
