update index and blog file

--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
+There is nothing here
 
+<!--
 <!doctype html>
 <html class="no-js" lang="en">
 <head>
@@ -126,4 +128,4 @@
     </script>
 <script type="text/javascript" src="https://intercom.zurb.com/scripts/zcom.js"></script>
 </body>
-</html>
+</html> -->
